--- a/style.css
+++ b/style.css
@@ -45,6 +45,9 @@ h1{
     border-radius: 1rem;
     border: none;
 }
+#new-btn{
+    margin-left: 20px;
+}
 #msg{
     color: #fdf0d5;
     font-size: 5vmin;
